# kolumnowe

./: .gitignore  README.md
czasy_zad1/: maciek.txt  marek.txt  robert.txt
exec_plan/: .cproject  operations.proto
exec_plan/grid/: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool  node_evironment.h
exec_plan/grid/src/: Makefile  Makefile.am  Makefile.in  header.h  header.h.in  stamp-h1
exec_plan/grid/src/grid_server/: Makefile  Makefile.am  Makefile.in  grid_server.cc  grid_server.h  grid_server_main  grid_server_main.cc
exec_plan/grid/src/grid_server/.deps/: grid_server.Po  grid_server_main.Po
exec_plan/grid/src/grid_server/proto/: Makefile  Makefile.am  Makefile.in  grid_server.pb.cc  grid_server.pb.h  grid_server.proto
exec_plan/grid/src/grid_server/proto/.deps/: grid_server.pb.Plo
exec_plan/grid/src/netio/: Makefile  Makefile.am  Makefile.in  basic.cc  basic.h  network_input.cc  network_input.h  network_output.cc  network_output.h
exec_plan/grid/src/netio/.deps/: basic.Po  network_input.Po  network_output.Po
exec_plan/grid/src/node_environment/: Makefile  Makefile.am  Makefile.in  data_server.cc  data_server.h  node_environment.cc
exec_plan/grid/src/node_environment/.deps/: data_server.Po  node_environment.Po
exec_plan/grid/src/node_environment_test_app/: Makefile  Makefile.am  Makefile.in  ne_app_main.cc  run.sh
exec_plan/grid/src/node_environment_test_app/.deps/: ne_app_main.Po
exec_plan/grid/src/sender/: Makefile  Makefile.am  Makefile.in  sender.cc
exec_plan/grid/src/sender/.deps/: sender.Po
exec_plan/grid/src/utils/: Makefile  Makefile.am  Makefile.in  logger.h
exec_plan/grid/src/utils/.deps/: ip_address.Po
exec_plan/src/: BlockSerializer.cc  BlockSerializer.cpp  BlockSerializer.h  ComputeOperation.cc  ComputeOperation.h  ExpressionNode.cc  ExpressionNode.h  FilterOperation.cc  FilterOperation.cpp  FilterOperation.h  GroupByOperation.cc  GroupByOperation.cpp  GroupByOperation.h  GroupReceiver.cc  GroupReceiver.cpp  GroupReceiver.h  GroupSender.cc  GroupSender.cpp  GroupSender.h  MEngine.cc  MEngine.h  Makefile  MemoryManager.h  Operation.h  OperationBuilder.cc  OperationBuilder.h  RealUniversalHashmap.cc  RealUniversalHashmap.cpp  RealUniversalHashmap.h  ScanOperation.cc  ScanOperation.h  UniversalHashmap.h  UniversalHashmap.h~  debug.h  engine.cc  engine.cc~  exec_plan  grid_server  layers.cc  layers.h  (+11 more)
exec_plan/tests/: q14.ascii  q16.ascii  q17.ascii  q20.ascii  q21.ascii  q22.ascii  q23.ascii  q30.ascii  r1.ascii  r10.ascii  r13.ascii  r2.ascii  r3.ascii  r4.ascii  r7_1.ascii  r8.ascii  r9.ascii  r_scan.ascii  test11.cpp  test12.cpp  test7.cpp  test9.cpp
kody_zad1/marek/: BinaryOperators.h  UnaryOperators.h  exec_plan.cc  makefile  nbinaryoperatorexpression.cc  nbinaryoperatorexpression.h  ncolumnexpression.cc  ncolumnexpression.h  ncomputeoperation.cc  (+21 more)
(+112 files in other folders)
